"""Module definition for the ImGui debug visualizer project."""

module(
    name = "imgui_debug_visualizer",
    version = "0.1.0",
    bazel_compatibility = [">=8.0.0"],
    compatibility_level = 1,
)

bazel_dep(name = "imgui", version = "1.92.2")
bazel_dep(name = "glfw", version = "3.3.9.bcr.1")
bazel_dep(name = "glew", version = "2.2.0")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "0e990032f3c5a866e72615cf67e5ce22186dcb97",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)
