"""Module definition for the ImGui debug visualizer project."""

module(
    name = "imgui_debug_visualizer",
    version = "0.1.0",
    bazel_compatibility = [">=8.0.0"],
    compatibility_level = 1,
)

# Hermetic C++ toolchain
bazel_dep(name = "hermetic_cc_toolchain", version = "4.0.0")

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_musl",
    "@zig_sdk//toolchain:linux_arm64_musl",
)

bazel_dep(name = "imgui", version = "1.92.2")
bazel_dep(name = "glfw", version = "3.4.0.bcr.1")
bazel_dep(name = "glew", version = "2.2.0")
bazel_dep(name = "libx11", version = "1.8.12.bcr.4")

libgl_ext = use_extension("//third_party/libgl:extension.bzl", "libgl_extension")
use_repo(libgl_ext, "mesa_gl")

single_version_override(
    module_name = "imgui",
    patch_strip = 1,
    patches = ["//third_party/patches/imgui:imgui_glfw_include.patch"],
    version = "1.92.2",
)

single_version_override(
    module_name = "glew",
    patch_strip = 1,
    patches = ["//third_party/patches/glew:glew_x11.patch"],
    version = "2.2.0",
)

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "0e990032f3c5a866e72615cf67e5ce22186dcb97",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)
